--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,64 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main-div{
   display: flex;
-  flex-direction: column;
-  align-items: center;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-family: 'Open Sans', sans-serif;
+font-family: 'Roboto', sans-serif;
+font-family: 'Roboto Condensed', sans-serif;
+background: bisque;
+height: 100vh;
+
+}
+
+.container{
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+ flex-direction: row;
 }
+.user-info,.form-sub{
+  display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+ .input-label, .userName-input{
+  font-size: x-large;
+ }
 
-.App-link {
-  color: #61dafb;
-}
+ .submit-button{
+  background: none;
+  border: 4px solid black;
+  padding: 5px;
+  margin: 5px 8px 5px;
+  width: 15vw;
+ }
+ .container-2{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-direction: column;
+ }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+ .git-img{
+   width: 25vw;
+ }
+ 
+
+
+@media (max-width:500px) {
+  .submit-button{
+    width:33vw;
+    margin: 5px 50px 5px 50px;
+
   }
-  to {
-    transform: rotate(360deg);
+  .form-sub{
+    margin: 10px;
+   /* padding: 0px 18vw 0px 21vw; */
+  }
+  h1,p,.userName-input,.input-label{
+    font-size: larger;
   }
 }
+ 
